[tool.poetry]
name = "alphavantage_api_client"
version = "0.0.13"
description = "Simple python wrapper around alphavantage api"
authors = ["Ray Garcia <ray@slashbin.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
